--- a/main.css
+++ b/main.css
@@ -31,3 +31,10 @@
     margin: 1rem;
  }
  /* Header Styles */
+ .bcard__profile-img{
+    width: 31.7rem;
+    height: 31.7rem;
+    border-radius: 10px 10px 10px 10px;
+    object-fit: cover;
+    object-position: top right;
+ }
