--- a/main.css
+++ b/main.css
@@ -38,3 +38,62 @@
     object-fit: cover;
     object-position: top right;
  }
+
+ /* body styles */
+ .bcard__body{
+    border-radius: 10px 10px 10px 10px;
+    background-color: saddlebrown;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0 3.5rem 0 3.5rem;
+ }
+ .bcard__heading-wrapper{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 1.6rem;
+ }
+ .bcard__heading-wrapper * + * {
+    margin-top: 0.5rem;
+ }
+
+ .bcard__name{
+    color: #ffffff;
+    font-size: 2.5rem;
+    font-weight: 30px;
+ }
+ .bcard__title{
+    color: brown;
+    font-weight: 400;
+    font-size: 1.28rem;
+ }
+
+ .bcard__btn-wrapper{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+ }
+ .bcard__btn{
+    min-width: 11.5rem;
+    height: 3.4rem;
+    cursor: pointer;
+    border-radius: 6px;
+    box-shadow: 0px 1px 2px rgba(0,0,0,0);
+ }
+ .bcard__btn-icon{
+    margin-right: 1rem;
+    font-size: 1.4rem;
+ }
+ .bcard__btn--email{
+    background-color: #ffffff;
+    border: 1px solid firebrick;
+ }
+ .bcard__btn--linkedin{
+    background-color: #5093e2;
+    color: #ffffff;
+ }
+
