--- a/main.css
+++ b/main.css
@@ -1,23 +1,25 @@
  @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital@1&display=swap');
 
- *{
+ * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
  }
 
- html{
+ html {
     font-size: 62.5%;
  }
- body{
+
+ body {
     background-color: #ce796b;
     font-family: 'Roboto Condensed', sans-serif;
  }
- a{
-    all:unset
+
+ a {
+    all: unset
  }
 
- .main{
+ .main {
     height: 100vh;
     width: 100ww;
     display: flex;
@@ -26,12 +28,13 @@
     align-items: center;
  }
 
- .bcard{
+ .bcard {
     width: 31.7rem;
     margin: 1rem;
  }
+
  /* Header Styles */
- .bcard__profile-img{
+ .bcard__profile-img {
     width: 31.7rem;
     height: 31.7rem;
     border-radius: 10px 10px 10px 10px;
@@ -40,7 +43,7 @@
  }
 
  /* body styles */
- .bcard__body{
+ .bcard__body {
     border-radius: 10px 10px 10px 10px;
     background-color: saddlebrown;
     display: flex;
@@ -49,51 +52,78 @@
     align-items: center;
     padding: 0 3.5rem 0 3.5rem;
  }
- .bcard__heading-wrapper{
+
+ .bcard__heading-wrapper {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     padding: 1.6rem;
  }
- .bcard__heading-wrapper * + * {
+
+ .bcard__heading-wrapper *+* {
     margin-top: 0.5rem;
  }
 
- .bcard__name{
+ .bcard__name {
     color: #ffffff;
     font-size: 2.5rem;
     font-weight: 30px;
  }
- .bcard__title{
+
+ .bcard__title {
     color: brown;
     font-weight: 400;
     font-size: 1.28rem;
  }
 
- .bcard__btn-wrapper{
+ .bcard__btn-wrapper {
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 100%;
  }
- .bcard__btn{
+
+ .bcard__btn {
     min-width: 11.5rem;
     height: 3.4rem;
     cursor: pointer;
     border-radius: 6px;
-    box-shadow: 0px 1px 2px rgba(0,0,0,0);
+    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0);
  }
- .bcard__btn-icon{
+
+ .bcard__btn-icon {
     margin-right: 1rem;
     font-size: 1.4rem;
  }
- .bcard__btn--email{
+
+ .bcard__btn--email {
     background-color: #ffffff;
     border: 1px solid firebrick;
  }
- .bcard__btn--linkedin{
+
+ .bcard__btn--linkedin {
     background-color: #5093e2;
     color: #ffffff;
  }
 
+ .bcard__text-wrapper {
+    margin-top: 1.8rem;
+    margin-bottom: 1.8rem;
+ }
+
+ .bcard__text-wrapper *+* {
+    margin-top: 1em;
+ }
+
+ .bcard__heading {
+    color: #f5f5f5;
+    font-size: 1.6rem;
+ }
+
+ .bcard__text {
+    color: azure;
+    font-size: 1.8rem;
+ }
+
+ 
