--- a/main.css
+++ b/main.css
@@ -1,4 +1,7 @@
- @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital@1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;300&display=swap');
+
+
+
 
  * {
     box-sizing: border-box;
@@ -11,8 +14,8 @@
  }
 
  body {
-    background-color: #ce796b;
-    font-family: 'Roboto Condensed', sans-serif;
+    background-color: #CEDEBD;
+    font-family: 'Oswald', sans-serif;
  }
 
  a {
@@ -45,7 +48,7 @@
  /* body styles */
  .bcard__body {
     border-radius: 10px 10px 0px 0px;
-    background-color: saddlebrown;
+    background-color: #435334;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -72,9 +75,9 @@
  }
 
  .bcard__title {
-    color: brown;
+    color: #ffffff;
     font-weight: 400;
-    font-size: 1.28rem;
+    font-size: 1.65rem;
  }
 
  .bcard__btn-wrapper {
@@ -98,13 +101,12 @@
  }
 
  .bcard__btn--email {
-    background-color: #ffffff;
-    border: 1px solid firebrick;
+    background-color: #FAF1E4;
  }
 
  .bcard__btn--linkedin {
-    background-color: #5093e2;
-    color: #ffffff;
+   background-color: #5093e2;
+   color: #FAF1E4;
  }
 
  .bcard__text-wrapper {
@@ -117,7 +119,7 @@
  }
 
  .bcard__heading {
-    color: #f5f5f5;
+    color: #FAF1E4;
     font-size: 1.6rem;
  }
 
@@ -128,14 +130,15 @@
 
  .bcard__footer{
    height: 6.5rem;
-   background-color: saddlebrown;
+   background-color: #9EB384;
    border-radius: 0px 0px 6px 6px;
    display: flex;
    justify-content: center;
    align-items: center;
  }
  .bcard__footer-icon {
-   background-color: #918E98;
+   color: #FAF1E4;
+   background-color: #9EB384;
    font-size: 2.7rem;
    padding: 0.2em;
    margin-right: 2.4rem;
@@ -146,5 +149,7 @@
    margin-right: 0;
  }
  @media (max-height:750px){
-   height: auto;
+   .main {
+      height: auto; }
  }
+
