--- a/main.css
+++ b/main.css
@@ -137,7 +137,7 @@
    align-items: center;
  }
  .bcard__footer-icon {
-   color: #FAF1E4;
+   color: #5C5470;
    background-color: #9EB384;
    font-size: 2.7rem;
    padding: 0.2em;
