--- a/main.css
+++ b/main.css
@@ -137,8 +137,8 @@ a {
 }
 
 .bcard__text {
-   color: azure;
-   font-size: 1.8rem;
+   color: #FAF1E4;
+   font-size: 1.50rem;
 }
 
 .bcard__footer {
