display block added

--- a/main.css
+++ b/main.css
@@ -43,6 +43,7 @@ a {
    border-radius: 10px 10px 0px 0px;
    object-fit: cover;
    object-position: top right;
+   display: block;
 }
 
 /* body styles */
