--- a/main.css
+++ b/main.css
@@ -95,7 +95,7 @@ a {
    height: 3.4rem;
    cursor: pointer;
    border-radius: 6px;
-   box-shadow: 0px 0px 0px 0px;
+   border: 0;
 }
 
 .bcard__btn-icon {
